
0.9.6c Oct 15, 2003
 * patch data is now fetched from patches/PACKAGES.TXT instead of
   parsing patches/FILE_LIST
 * set curl user-agent as 'slapt-get'

0.9.6b Oct 14, 2003
 * fixed bug when removing pkg by base pkg name and removepkg wouldn't find
   entry in /var/log/packages.  Thanks to DanB at mojolin dot com and
   tg at linuxpackages dot net.

0.9.6a Oct 14, 2003
 * fixed issue with allocated strings with --install and --remove
 * fixed --install pkgname --reinstall regression

0.9.6 Oct 13, 2003
 * removed needless check in get_md5sum looking for common slack mirror
   directories.
 * Prompt to upgrade before downloading (thanks kyotou)
 * updated FAQ with dropline question, and upgrade single package question
 * options can now be passed in in any order, so --no-prompt at the end now
   works
 * created struct pkg_list *get_available_and_update_pkgs(void) to search for
   updates and newer available at once, simplified --install and --upgrade
   part of roadmap to package action transactions.
 * implemented transaction engine
 * --interactive option to emulate old upgrade procedure, prompting for each
   upgrade.
 * multiple source support complete.  Linuxpackage integration should be
   working.  slapt-getrc syntax has changed.  Updated documentation
   appropriately.
 * trimmed out download_pkg_list, download_file_list, download_patches_list,
   and download_checksum_list.  Replaced those functions with single
   get_mirror_data_from_source.
 * merged in package update data from filelist into PACKAGES.TXT format,
   so single lookup returns all packages.
 * added excludes to transaction, now shows packages excluded/held back
 * removed more legacy functions since merging package data and updates...
   the new get_available_and_update_pkgs is now gone.
 * pkg_action_install() and pkg_action_remove() now take structure of
   packages for transaction

0.9.5e Oct 10, 2003
 * added a doinst.sh script (generated from the Makefile) to help 