@@ -3,6 +3,7 @@
  * patch data is now fetched from patches/PACKAGES.TXT instead of
    parsing patches/FILE_LIST
  * set curl user-agent as 'slapt-get'
+ * retrieve extra/ package data
 
 0.9.6b Oct 14, 2003
  * fixed bug when removing pkg by base pkg name and removepkg wouldn't find
